fix(core): update control height and control contrast corrections
- Updated control height variables to use system-level interaction field height across various components.
- Fixed issue with incorrect interaction state computed colors due to bad inheritance
- Fixed issue when a control/interaction failed to have contrast due to no inherited background to compute from

--- a/projects/elements/src/range/range.css
+++ b/projects/elements/src/range/range.css
@@ -1,6 +1,6 @@
 :host {
   --background: var(--accent-color);
-  --control-height: var(--nve-ref-size-800);
+  --control-height: var(--nve-sys-interaction-field-height);
   --cursor: pointer;
   --track-width: 0.5;
   --track-height: var(--nve-ref-size-150);
